...
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/max"
            android:layout_toStartOf="@+id/max"
            android:layout_weight="0.5"
            android:ems="10"
            android:imeOptions="actionSearch"
            android:hint="@string/min_price"
            android:inputType="number"
...
